syntax = "proto3";

package idl;

import "cli_to_hub.proto";

service Agent {
  rpc CheckDiskSpace (CheckSegmentDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
  rpc UpgradePrimaries (UpgradePrimariesRequest) returns (UpgradePrimariesReply) {}
  rpc RenameDataDirectories (RenameDataDirectoriesRequest) returns (RenameDataDirectoriesReply) {}
  rpc StopAgent (StopAgentRequest) returns (StopAgentReply) {}
  rpc DeleteDirectories (DeleteDirectoriesRequest) returns (DeleteDirectoriesReply) {}
  rpc CreateFiles (CreateFilesRequest) returns (CreateFilesReply) {}
}

enum ClusterType {
  UNKNOWN_TYPE = 0; // http://androiddevblog.com/protocol-buffers-pitfall-adding-enum-values/
  SOURCE = 1;
  TARGET = 2;
}

message UpgradePrimariesRequest {
    string SourceBinDir = 1;
    string TargetBinDir = 2;
    string TargetVersion = 3;
    repeated DataDirPair DataDirPairs = 4;
    bool CheckOnly = 5;
    bool UseLinkMode = 6;
    string MasterBackupDir = 7;
}

message DataDirPair {
    string SourceDataDir = 1;
    string TargetDataDir = 2;
    int32  SourcePort    = 3;
    int32  TargetPort    = 4;
    int32  Content    = 5;
    int32  DBID       = 6;
}

message UpgradePrimariesReply {}

message DeleteDirectoriesRequest {
  repeated string datadirs = 1;
}

message DeleteDirectoriesReply {}

message CreateFilesRequest {
  repeated string Files = 1;
}

message CreateFilesReply {}

message RenameDataDirs {
  string Source = 1;
  string Target = 2;
}

// TODO: the upgradeID is a per-upgrade feature, so we should instead
//  somehow make it "global" throughout the agent.
message RenameDataDirectoriesRequest {
  repeated RenameDataDirs DataDirs = 1;
  uint64 upgradeID = 2;
}

message RenameDataDirectoriesReply {}

message StopAgentRequest {}
message StopAgentReply {}

message CheckSegmentDiskSpaceRequest {
    CheckDiskSpaceRequest request = 1;
    repeated string datadirs = 2;
}
